# silt-road

./: Cargo.toml  silt_road_prefs.ron
.github/workflows/: release.yaml
assets/config/: BusinessSupplyDemand.ron
src/: audio.rs  caravan.rs  character.rs  commodity.rs  constants.rs  dev_tools.rs  helpers.rs  inventory.rs  lib.rs  main.rs  screens.rs  trade_resources.rs
src/commodities/: commodity.rs  mod.rs  quality.rs
src/terrain/: chunk.rs  chunk_manager.rs  mod.rs  tile.rs  world_gen.rs
src/theme/: interaction.rs  mod.rs  palette.rs  widgets.rs
src/town/: mod.rs
web/: index copy.html
web/silt-road/: index.html  package-lock.json  package.json
web/silt-road/src/: Commodity.ts  Globals.ts  KaplayConfig.ts  MainTs.ts  main.js
web/silt-road/src/MapView/: MapView.ts  Town.ts
web/silt-road/src/objects/: Commodity.ts  HighlightToggleable.ts  TownIdx.ts
web/silt-road/src/scenes/: BusinessMenu.ts  InTown.ts  MapView.ts
web/silt-road/src/utils/: Button.ts  CamScaleUnaffected.ts  TownNames.ts
